file(GLOB_RECURSE MACHINIST_FILES "${MACHINIST_SRC_DIR}/machinist/*.cpp" "${MACHINIST_SRC_DIR}/machinist/*.hpp")
list(FILTER MACHINIST_FILES EXCLUDE REGEX ".*pattern.cpp$")
list(FILTER MACHINIST_FILES EXCLUDE REGEX ".*storable.cpp$")
add_executable(Machinist machinist.cpp ${MACHINIST_FILES})


install(TARGETS Machinist
        RUNTIME DESTINATION bin
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        )